tests/golden/err-import-path-space/expected_error.txt
error: `@` とパスのあいだに空白は書けません
 --> main.clum:1:2
  |
1 | @ ./page
  |  ^ パスは `@` に密着させます（例: `@./index`）
